umol-io/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@bcl_MolecularAsymmetryEnsemble.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C47H51NO14
      atom_count: 113
      bond_count: 119
      property_count: 90
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C47H51NO14
      atom_count: 113
      bond_count: 119
      property_count: 90
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C47H51NO14
      atom_count: 113
      bond_count: 119
      extended_atoms: 0
      extended_bonds: 0
      property_count: 90
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C47H51NO14
      atom_count: 113
      bond_count: 119
      extended_atoms: 0
      extended_bonds: 0
      property_count: 90
      rgroup_count: 0
      sgroup_count: 0
