umol-io/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@bcl_benzene_moe_bcl_out.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 16, col 0"
molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 16, col 0"
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C6H6
      atom_count: 12
      bond_count: 12
      extended_atoms: 0
      extended_bonds: 12
      property_count: 32
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C6H6
      atom_count: 12
      bond_count: 12
      extended_atoms: 0
      extended_bonds: 12
      property_count: 32
      rgroup_count: 0
      sgroup_count: 0
